# GPRat

./: .gitignore  1-2-cholesky-cpu.ipynb  10-11-predict-uncer.ipynb  12-13-predict-fullcov.ipynb  3-4-cholesky-gpu.ipynb  5-6-cholesky-cpu-gpu.ipynb  7-8-predict-fullcov.ipynb  7-cholesky-cpu-gpu.ipynb  8-9-predict.ipynb  CMakeLists.txt  CMakePresets.json  README.md  X1-X2-predict-fullcov-cpu.ipynb  X3-X4-predict-fullcov-gpu.ipynb  compile_gprat.sh  compile_gpxpy_cpp.sh  compile_gpxpy_cpp_simcl1.sh  compile_gpxpy_python.sh  compile_gpxpy_python_simcl1.sh  requirements.txt  setup.sh  utils.py
bindings/: gprat_py.cpp  gpxpy_py.cpp  utils_py.cpp
core/: CMakeLists.txt
core/include/: adapter_cublas.cuh  adapter_cublas.hpp  adapter_mkl.hpp  apex_utils.hpp  cuda_kernels.cuh  cuda_utils.cuh  cuda_utils.hpp  gp_algorithms_cpu.hpp  gp_algorithms_gpu.cuh  gp_functions.hpp  gp_hyperparameters.hpp  gp_kernels.hpp  gp_optimizer.hpp  gp_optimizer_cpu.hpp  gp_optimizer_gpu.cuh  gp_uncertainty.hpp  gp_uncertainty_cpu.hpp  gp_uncertainty_gpu.cuh  gprat_c.hpp  gpxpy_c.hpp  matrix.cuh  matrix_assembly.cuh  target.hpp  tiled_algorithms_cpu.hpp  tiled_algorithms_gpu.cuh
core/include/cpu/: gp_algorithms.hpp  gp_functions.hpp  gp_optimizer.hpp  gp_uncertainty.hpp  tiled_algorithms.hpp
core/include/gpu/: adapter_cublas.cuh  cuda_utils.cuh  gp_algorithms.cuh  gp_functions.cuh  gp_optimizer.cuh  gp_uncertainty.cuh  tiled_algorithms.cuh
core/src/: adapter_cublas.cpp  adapter_cublas.cu  adapter_mkl.cpp  cuda_kernels.cu  gp_algorithms_cpu.cpp  gp_algorithms_gpu.cu  gp_functions.cpp  gp_hyperparameter.cpp  gp_kernels.cpp  gp_optimizer_cpu.cpp  gp_optimizer_gpu.cu  gp_uncertainty_cpu.cpp  gp_uncertainty_gpu.cu  gprat_c.cpp  gpxpy_c.cpp  matrix_assembly.cu  target.cpp  tiled_algorithms_cpu.cpp  tiled_algorithms_gpu.cu  utils_c.cpp
core/src/cpu/: adapter_cblas_fp32.cpp  adapter_cblas_fp64.cpp  gp_algorithms.cpp  gp_functions.cpp  gp_optimizer.cpp  gp_uncertainty.cpp  tiled_algorithms.cpp
core/src/gpu/: adapter_cublas.cu  gp_algorithms.cu  gp_functions.cu  gp_optimizer.cu  gp_uncertainty.cu  tiled_algorithms.cu
data/1/: apex_profiles_12_32768_128_8_10.csv  apex_profiles_12_32768_16_8_10.csv  apex_profiles_12_32768_1_8_10.csv  apex_profiles_12_32768_256_8_10.csv  apex_profiles_12_32768_2_8_10.csv  apex_profiles_12_32768_32_8_10.csv  apex_profiles_12_32768_4_8_10.csv  apex_profiles_12_32768_512_8_10.csv  apex_profiles_12_32768_64_8_10.csv  apex_profiles_12_32768_8_8_10.csv  apex_profiles_24_32768_128_8_10.csv  apex_profiles_24_32768_16_8_10.csv  apex_profiles_24_32768_1_8_10.csv  apex_profiles_24_32768_256_8_10.csv  apex_profiles_24_32768_2_8_10.csv  apex_profiles_24_32768_32_8_10.csv  apex_profiles_24_32768_4_8_10.csv  apex_profiles_24_32768_512_8_10.csv  apex_profiles_24_32768_64_8_10.csv  apex_profiles_24_32768_8_8_10.csv  apex_profiles_48_32768_128_8_10.csv  apex_profiles_48_32768_16_8_10.csv  apex_profiles_48_32768_1_8_10.csv  apex_profiles_48_32768_256_8_10.csv  apex_profiles_48_32768_2_8_10.csv  apex_profiles_48_32768_32_8_10.csv  apex_profiles_48_32768_4_8_10.csv  apex_profiles_48_32768_512_8_10.csv  apex_profiles_48_32768_64_8_10.csv  apex_profiles_48_32768_8_8_10.csv  apex_profiles_6_32768_128_8_10.csv  apex_profiles_6_32768_16_8_10.csv  apex_profiles_6_32768_1_8_10.csv  apex_profiles_6_32768_256_8_10.csv  apex_profiles_6_32768_2_8_10.csv  apex_profiles_6_32768_32_8_10.csv  apex_profiles_6_32768_4_8_10.csv  apex_profiles_6_32768_512_8_10.csv  apex_profiles_6_32768_64_8_10.csv  apex_profiles_6_32768_8_8_10.csv
data/2/: apex_profiles_48_32768_128_8_10.csv  (+9 more)
data/X1/: output-cpu.csv
examples/gprat_cpp/: CMakeLists.txt  run_gprat_cpp.sh
experiment/: local_job.sh  slurm_job-1.sh  slurm_job-10.sh  slurm_job-11-12.sh  slurm_job-13a.sh  slurm_job-13b.sh  slurm_job-14.sh  slurm_job-15a.sh  slurm_job-15b.sh  slurm_job-16.sh  slurm_job-17-18.sh  slurm_job-2.sh  slurm_job-3.sh  slurm_job-4.sh  slurm_job-7.sh  slurm_job-8.sh  slurm_job-9.sh  slurm_job.sh  test-1-cholesky-cpu.sh  test-2-cholesky-cpu.sh  test-3-cholesky-gpu.sh  test-4-cholesky-gpu.sh  test-5-cholesky-cpu-gpu.sh  test-6-cholesky-cpu-gpu.sh  test-7-cholesky-assembly.sh  test-7a-predict-fullcov-gprat.sh  test-7b-predict-fullcov-gpytorch-gpflow.sh  test-8-predict-fullcov-gprat.sh  test-8-predict-fullcov-gpytorch-gpflow.sh  test-8-predict.sh  test-9-predict-fullcov-gprat.sh  test-9-predict.sh  test-X1-predict-fullcov-gprat.sh  test-X2-predict-fullcov-gprat.sh  test-X3-predict-fullcov-gprat.sh  test-X4-predict-fullcov-gprat.sh  test-test-predict-fullcov-gprat.sh
spack_env/: hpx_package.py  spack.yaml
spack_env_simcl1/: hpx_package.py  spack.yaml
(+861 files in other folders)
